# s5cmd-python-distributions

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  noxfile.py  pyproject.toml  s5cmdUrls.cmake
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml
docs/: conf.py  index.md
scripts/: update_s5cmdUrls.cmake.py
src/s5cmd/: __init__.py
tests/: test_compiled.py  test_executable.py  test_package.py
